internal/config/testdata/invalid-config/Account.hjson
{
  APIAppCredentials:
  {
    ClientID: client-id
    ClientSecret: client-secret
  }
  Account: ""
  SecretsBackendType: auto
  Jobs:
  [
    {
      SourceFolder: ./testdata
      MakeAlbums:
      {
        Enabled: true
        Use: folderName
      }
      DeleteAfterUpload: false
      IncludePatterns: []
      ExcludePatterns: []
    }
  ]
}